mise à jour favicon footer

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title>Lindsay shopping</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/logo.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -330,9 +330,7 @@
                             <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lindsay Shop. All rights reserved.</p>
                         </div>
                         <!-- Footer Logo -->
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
+                       
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="https://www.facebook.com/lindsay.amadi"><img src="img/core-img/facebook.png" alt="facebook" style="width: 20px; height: 20px;"></a>
