--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Lindsay shopping</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/logo.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -98,7 +98,7 @@
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
                         <p>Email</p>
-                        <a href="https://preview.colorlib.com/cdn-cgi/l/email-protection#ed84838b82c38988889f8e9f888c99849b88ad8a808c8481c38e8280"><span class="__cf_email__" data-cfemail="e881868e87c68c8d8d9a8b9a8d899c819e8da88f85898184c68b8785">[email&#160;protected]</span></a>
+                        <a href=""><span class="__cf_email__" data-cfemail="e881868e87c68c8d8d9a8b9a8d899c819e8da88f85898184c68b8785">amadilindsay00@gmail.com</span></a>
                     </div>
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
@@ -230,9 +230,6 @@
                             <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lindsay Shop. All rights reserved.</p>
                         </div>
                         <!-- Footer Logo -->
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="https://www.facebook.com/lindsay.amadi"><img src="img/core-img/facebook.png" alt="facebook" style="width: 20px; height: 20px;"></a>
