--- a/produits.html
+++ b/produits.html
@@ -22,7 +22,7 @@
     <title>Lindsay shopping</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/logo.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -219,11 +219,6 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="800ms">
-                    <a href="javascript:void(0);" class="btn alime-btn btn-2 mt-15">View More</a>
-                </div>
-            </div>
         </div>
     </div>
     <!-- Gallery Area End -->
@@ -378,9 +373,7 @@
                             <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lindsay Shop. All rights reserved.</p>
                         </div>
                         <!-- Footer Logo -->
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
+                       
                         <!-- Social Info -->
                         <div class="social-info">
                             <a href="https://www.facebook.com/lindsay.amadi"><img src="img/core-img/facebook.png" alt="facebook" style="width: 20px; height: 20px;"></a>
